# whirld

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev_progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  whirld-prd-mvp.md
.claude/: settings.local.json
docker/: clean-room.Dockerfile
scripts/: _clean_room_macos_provision.sh  check_registry.py  clean_room_macos.sh  clean_room_test.py
src/whirld/: __init__.py  _version.py  api.py  config.py  errors.py  logging_setup.py
src/whirld/cli/: __init__.py
src/whirld/cli/commands/: __init__.py  _stac.py  classify.py  embed.py  info.py  list.py  pull.py  rm.py  segment.py  serve.py
src/whirld/core/: __init__.py  chips.py  contract.py  fetch.py  governance.py  registry.py  sensor.py  session.py
src/whirld/io/: __init__.py  output.py  raster.py  stac.py
src/whirld/models/: __init__.py  _clay_metadata.py  base.py  clay.py  clay_torch.py  loader.py  prithvi.py  remoteclip.py
src/whirld/models/_vendor/: __init__.py
src/whirld/models/_vendor/clay_v15/: NOTICE  PROVENANCE.md  __init__.py  encoder.py
src/whirld/registry_data/: CONTRIBUTING.md
src/whirld/registry_data/models/: clay-v1.5.yaml  clay-v1.yaml  prithvi-burn-scar.yaml  remoteclip.yaml
src/whirld/registry_data/schema/: model.schema.json
src/whirld/server/: __init__.py  app.py  schemas.py
src/whirld/server/routes/: __init__.py  classify.py  embed.py  health.py  models.py  segment.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/fixtures/: make_fixtures.py
tests/integration/: test_classify.py  test_clay_real.py  test_cli.py  test_cli_paydown.py  test_embed_clay.py  test_governance_cli.py  test_prithvi_real.py  test_remoteclip_real.py  test_segment.py  test_server.py  test_stac_input.py  test_stac_real.py
tests/unit/: test_chips.py  test_clay_backend.py  test_clay_metadata.py  test_clay_torch.py  test_contract.py  test_cpu_warning.py  test_fetch.py  test_governance.py  test_loader.py  test_output_geojson.py  test_prithvi.py  test_raster_bytes.py  test_registry.py  test_remoteclip.py  test_rm.py  test_security_invariants.py  test_segment_output.py  test_sensor.py  test_session.py  test_stac.py
