[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whirld"
version = "0.1.0"
description = "Local-first CLI and library for running geospatial foundation models (the Ollama for geospatial)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Whirld" }]
keywords = ["geospatial", "foundation-models", "remote-sensing", "clay", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "rasterio>=1.3",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real Hugging Face weight loading + the torch-backed Clay v1.5 encoder.
hf = ["huggingface_hub>=0.23", "torch>=2.2,<3.0", "einops>=0.8"]
# RemoteCLIP zero-shot classification backend.
remoteclip = ["open_clip_torch>=2.24", "huggingface_hub>=0.23"]
# Prithvi EO 2.0 segmentation backend (TerraTorch).
prithvi = ["terratorch>=1.2", "huggingface_hub>=0.23"]
# REST API server (`whirld serve`).
serve = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9"]
# STAC item-URL input works in the base install (stdlib fetch + rasterio /vsicurl/
# range reads); no extra needed. This extra is reserved for a future multi-item
# STAC *search*/mosaic surface.
stac = ["pystac-client>=0.8"]

[project.scripts]
whirld = "whirld.cli:app"

[project.urls]
Homepage = "https://github.com/whirld/whirld"
Repository = "https://github.com/whirld/whirld"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whirld = [
    "registry_data/models/*.yaml",
    "registry_data/schema/*.json",
    "registry_data/*.md",
    "models/_vendor/clay_v15/LICENSE",
    "models/_vendor/clay_v15/NOTICE",
    "models/_vendor/clay_v15/PROVENANCE.md",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
# Vendored third-party code (Apache-2.0, copied verbatim) is not ours to reformat.
force-exclude = "src/whirld/models/_vendor"

[tool.ruff]
line-length = 88
target-version = "py310"
# Vendored third-party code (Apache-2.0, copied verbatim) is not ours to restyle.
extend-exclude = ["src/whirld/models/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer/FastAPI dependency-injection defaults are calls by design (not mutable state).
extend-immutable-calls = [
    "typer.Option",
    "typer.Argument",
    "fastapi.File",
    "fastapi.Form",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Expected: the no-CRS negative test deliberately writes/reads an ungeoreferenced TIFF.
    "ignore::rasterio.errors.NotGeoreferencedWarning",
    # Starlette's TestClient warns about httpx; harmless and outside our control.
    "ignore:Using .httpx. with .starlette.testclient.",
    # rasterio's write path trips a NumPy 2.5 shape-setter deprecation (not our code).
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["whirld"]
omit = ["*/tests/*", "*/models/_vendor/*"]
